[package]
name = "dorito-8"
version = "0.1.0"
authors = ["Christian Nieves <christian@nieves.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.30.0"
default-features = false
features = ["image", "gfx"]
